--- a/styles/homepage/hero-section.css
+++ b/styles/homepage/hero-section.css
@@ -3,14 +3,6 @@
   width: 100vw;
   overflow: hidden;
 }
-/* 
-video {
-  object-fit: cover;
-  height: 100%;
-  width: 100%;
-  pointer-events: none;
-  z-index: -1;
-} */
 
 video {
   object-fit: cover;
@@ -20,6 +12,6 @@ video {
   min-width: 100%;
   pointer-events: none;
   z-index: -2;
-  background-color: #008198;
+  background-color: #000;
   background-blend-mode: darken;
 }
